# MicroVLM-E

./: DATASET_DOWNLOAD_GUIDE.txt  DOWNLOAD_STATUS_EXAMPLE.txt  PROJECT_STRUCTURE.txt  README.md  WANDB_IMPLEMENTATION_SUMMARY.txt  WANDB_LOGGING_GUIDE.txt  WANDB_QUICK_REFERENCE.txt  download-log.txt  evaluate.py  export_model.py  inference.py  pyproject.toml  quick_start.py  requirements.txt  setup.py  train.py  visualize_alignment.py
configs/: default.yaml
configs/datasets/: data_config.yaml
configs/models/: microvlm_default.yaml  microvlm_diet_small.yaml
eval_configs/: eval_default.yaml
microvlm_e/: __init__.py
microvlm_e/common/: __init__.py  config.py  dist_utils.py  logger.py  optims.py  registry.py  utils.py
microvlm_e/datasets/: __init__.py
microvlm_e/datasets/builders/: __init__.py  base_builder.py  image_text_builder.py
microvlm_e/datasets/datasets/: __init__.py  image_text_dataset.py
microvlm_e/models/: __init__.py  base_model.py  diet_encoder.py  microvlm.py  qformer.py
microvlm_e/models/quantization/: __init__.py  bitnet_quant.py  int8_quant.py
microvlm_e/processors/: __init__.py  image_processor.py  text_processor.py
microvlm_e/runners/: __init__.py  runner_base.py
microvlm_e/tasks/: __init__.py  image_text_pretrain.py
microvlm_e/visualization/: __init__.py  attention_viz.py
scripts/: download-new.py  download_datasets.py  run_training.ps1  run_training.sh
train_configs/: qlora_training.yaml  stage1_alignment.yaml  stage2_lora.yaml  stage3_instruct.yaml  stage4_multitask.yaml
